--- a/style.css
+++ b/style.css
@@ -2,12 +2,16 @@ body {
 	font-family: 'Asap', sans-serif;
 	margin: 0;
 	padding: 0;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+   
 }
-.header{
+/* .header{
     position: fixed;
     top: 0;
     width: 100%;
-}
+} */
 header { 
 	background-color: orange;
 	color: #fff;
@@ -39,6 +43,7 @@ nav ul li a {
 }
 
 main {
+   height: 90vh;
 	margin-top: 10%;
 }
 
@@ -90,7 +95,7 @@ main {
     text-shadow:2px 2px 5px skyblue ;
     box-shadow: 2px 2px 2px 2px #666;
 }
-.about{
+.about{ margin-top: 30%;
     background-color: rgb(255, 248, 238);
     padding: 2px;
     
@@ -114,6 +119,10 @@ main {
 }
 .border{
     border-bottom: black 2px dotted;
+}
+h1{
+    text-align: center;
+    text-shadow: 2px 2px 5px blueviolet;
 }
 footer {
     background-color: #333;
